--- a/templates/playerload.html
+++ b/templates/playerload.html
@@ -6,9 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
-    <!-- <script type="text/javascript" src="{{ url_for('static', filename = '../static/home.js') }}"></script> -->
+    <script type="text/javascript" src="{{ url_for('static', filename = '../static/playerload.js') }}"></script>
 
-    <script src="../static/playerload.js"></script>
 
     <style>
     body{
