found way to keep unique id for each user, working on making actions of one player appear on both players screens (like getting a set)

--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,7 @@
     <script>
         var gameHand = {{gameHand|tojson}}
         var deckSize = {{deckSize|tojson}}
+        var playerPoints = {{playerPoints|tojson}}
     </script>
 
     <script type="text/javascript" src="{{ url_for('static', filename = '../static/main.js') }}"></script>
