multiplayer functionality works almost completely. took out unnecessary print statements

--- a/templates/main.html
+++ b/templates/main.html
@@ -76,6 +76,7 @@
     }
     .selectedCard{
         opacity: 40%;
+        background: grey;
     }
     #score{
         font-size: 30px;
@@ -88,6 +89,13 @@
         display: inline-block;
         margin-left: 50px;
         margin-top: 70px;
+    }
+    #correctLayer{
+        font-size: 50px;
+        color: rgb(47, 255, 75);
+        font-weight: bolder;
+        margin-left: 5px;
+        margin-top: 5px;
     }
 
  
