--- a/templates/playerload.html
+++ b/templates/playerload.html
@@ -18,7 +18,7 @@
             console.log("playerID at playerload")
             console.log(playerID)
             // sending a connect request to the server.
-            var socket = io.connect('http://localhost:5000');
+            var socket = io.connect('http://167.99.226.165:5000');
             
             socket.on('after connect', function(msg){
             	console.log('after connect', msg);
